# sqlpp11-connector-skeleton

./: .gitignore  CMakeLists.txt
include/sqlpp11/skeleton/: char_result.h  char_result_row.h  serializer.h
src/: CMakeLists.txt  bind_result.cpp  char_result.cpp  connection.cpp
src/detail/: connection_handle.cpp  connection_handle.h  prepared_statement_handle.h  result_handle.h
tests/: CMakeLists.txt  SkeletonTest.cpp  demo.h
